--- a/instructions.html
+++ b/instructions.html
@@ -41,7 +41,7 @@
     <div class="circle150 blue1" style="right:40%;top:70%"></div>
     <div class="aiAbs" style="align:center;height:9%;width:43%;right:8%;top:61.5%">
       <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="Picture of the Portabraille interface" style="width:90%%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\instructions2.jpg"/></img>
+      <img class="portrait" alt="Picture of the Portabraille interface" style="width:90%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\instructions2.jpg"/></img>
     </div>
 
     <div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:860px;width:81px;">
