--- a/electrical.html
+++ b/electrical.html
@@ -41,7 +41,7 @@
     <div class="circle675 blue2" style="right:10%;top:43%"></div>
     <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-440px;top:45%">
       <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="Portabraille printing" style="width:90%;height:auto;top:30px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\electricalfinaltrace.png"/></img>
+      <img class="portrait" alt="Portabraille printing" style="width:75%;height:auto;top:30px;left:50%;margin-left:-37.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\electricalfinaltrace.PNG"/></img>
     </div>
 
     <div class="circle450 blue3" style="left:55%;top:80%"></div>
