--- a/software.html
+++ b/software.html
@@ -76,7 +76,7 @@
 		</div>
 
     <div id="ai0-1" class="Layer_1 aiAbs" style="top:4.9755%;left:49.9236%;margin-left:-32.6429%;width:65.2858%;">
-			<p class="pstyle0">Software</p>
+			<p class="pstyle2" style="text-align:center">Software</p>
 		</div>
 		<div id="ai0-2" class="Layer_1 aiAbs" style="top:9.5982%;left:13.7989%;width:72.4109%;">
 			<p class="pstyle1">The Portabraille has a few main software components: a portion that processes and writes text, a portion that recognizes USB and Wi-Fi input, a portion that hosts and handles our Wi-Fi network and a portion that handles the physical input from the user interface. There are also various scripts which allow users to easily set up new drives with the right dependencies and a script which allows the printer to run continuously once it is switched on. To run all of this software, we chose to use a Raspberry Pi 3B+. </p>
